--- a/index.html
+++ b/index.html
@@ -102,69 +102,18 @@ $(document).ready(function(e) {
 	 	$("#pm25 > .content").html(row.pm25 + " ug/m3");
 	 	$("#pm10 > .content").html(row.pm10 + " ug/m3");
 		$('#update_time').html(row.time);
-		
+
 		$("#status").removeClass("success").addClass("danger");
 		$("#status > .content").text("Updating...");
 		
 		if (Math.round(now) -  Math.round(Arow.time) < (2 * 60 * 1000)) {
 			$("#status").removeClass("success").addClass("danger");
 			$("#status > .content").text("Updating..");
+			
+			
 		} else {
 			$("#status").removeClass("danger").addClass("success");
 			$("#status > .content").text("Up to date");
-		}
-
-		if(row.pm25 >=0 && row.pm25 <=25)
-		{
-			$("#qut25 > .qurity").text("Very Good");
-			$("#pm25").removeClass("success").addClass("verygood");
-		}
-		else if(row.pm25 >=26 && row.pm25 <=37)
-		{
-			$("#qut25 > .qurity").text("Good");
-			$("#pm25").removeClass("success").addClass("good");
-		}
-		else if(row.pm25 >=38 && row.pm25 <=50)
-		{
-			$("#qut25 > .qurity").text("Medium");
-			$("#pm25").removeClass("success").addClass("mediam");
-		}
-		else if(row.pm25 >=51 && row.pm25 <=90)
-		{
-			$("#qut25 > .qurity").text("Bad");
-			$("#pm25").removeClass("success").addClass("bad");
-		}
-		else if(row.pm25 > 90)
-		{
-			$("#qut25 > .qurity").text("Very Bad");
-			$("#pm25").removeClass("success").addClass("verybad");
-		}
-
-		////////////////////////////////////////////////////////////////////////////////////////////////////
-		if(row.pm10 >=0 && row.pm10 <=50)
-		{
-			$("#qut10 > .qurity").text("Very Good");
-			$("#pm10").removeClass("success").addClass("verygood");
-		}
-		else if(row.pm10 >=51 && row.pm10 <=80)
-		{
-			$("#qut10 > .qurity").text("Good");
-			$("#pm10").removeClass("success").addClass("good");
-		}
-		else if(row.pm10 >=81 && row.pm10 <=120)
-		{
-			$("#qut10 > .qurity").text("Medium");
-			$("#pm10").removeClass("success").addClass("mediam");
-		}
-		else if(row.pm10 >=121 && row.pm10 <=180)
-		{
-			$("#qut10 > .qurity").text("Bad");
-			$("#pm10").removeClass("success").addClass("bad");
-		}
-		else if(row.pm10 > 180)
-		{
-			$("#qut10 > .qurity").text("Very Bad");
-			$("#pm10").removeClass("success").addClass("verybad");
 		}
 		setTimeoffline();
 	});
@@ -203,54 +152,44 @@ $(document).ready(function(e) {
 
 		if(Arow.pm25 >=0 && Arow.pm25 <=25)
 		{
-			$("#qut25 > .qurity").text("Very Good");
 			$("#pm25").removeClass("success").addClass("verygood");
 		}
 		else if(Arow.pm25 >=26 && Arow.pm25 <=37)
 		{
-			$("#qut25 > .qurity").text("Good");
 			$("#pm25").removeClass("success").addClass("good");
 		}
 		else if(Arow.pm25 >=38 && Arow.pm25 <=50)
 		{
-			$("#qut25 > .qurity").text("Medium");
 			$("#pm25").removeClass("success").addClass("mediam");
 		}
 		else if(Arow.pm25 >=51 && Arow.pm25 <=90)
 		{
-			$("#qut25 > .qurity").text("Bad");
 			$("#pm25").removeClass("success").addClass("bad");
 		}
 		else if(Arow.pm25 > 90)
 		{
-			$("#qut25 > .qurity").text("Very Bad");
 			$("#pm25").removeClass("success").addClass("verybad");
 		}
 
 		////////////////////////////////////////////////////////////////////////////////////////////////////
 		if(Arow.pm10 >=0 && Arow.pm10 <=50)
 		{
-			$("#qut10 > .qurity").text("Very Good");
 			$("#pm10").removeClass("success").addClass("verygood");
 		}
 		else if(Arow.pm10 >=51 && Arow.pm10 <=80)
 		{
-			$("#qut10 > .qurity").text("Good");
 			$("#pm10").removeClass("success").addClass("good");
 		}
 		else if(Arow.pm10 >=81 && Arow.pm10 <=120)
 		{
-			$("#qut10 > .qurity").text("Medium");
 			$("#pm10").removeClass("success").addClass("mediam");
 		}
 		else if(Arow.pm10 >=121 && Arow.pm10 <=180)
 		{
-			$("#qut10 > .qurity").text("Bad");
 			$("#pm10").removeClass("success").addClass("bad");
 		}
 		else if(Arow.pm10 > 180)
 		{
-			$("#qut10 > .qurity").text("Very Bad");
 			$("#pm10").removeClass("success").addClass("verybad");
 		}
 
@@ -329,45 +268,6 @@ var setTimeoffline = function() {
 	font-weight: bold;
 }
 
-.dialog > .qurity {
-	padding: 30px 0;
-	border-radius: 6px 6px 0 0;
-	font-size: 24px;
-	color: rgba(70, 70, 70, 0.87);
-	text-align: center;
-}
-.dialog.primary > .qurity{
-	background: #00aa9a;
-}
-.dialog.success > .qurity {
-	background: #59b75c;
-}
-.dialog.info > .qurity {
-	background: #03a9f4;
-}
-.dialog.warning > .qurity {
-	background: #ff5722;
-}
-
-.dialog.danger > .qurity {
-	background: #f44336;
-}
-
-.dialog.verygood > .qurity {
-	background: #1cc1f3;
-}
-.dialog.good > .qurity {
-	background: #4fa535;
-}
-.dialog.mediam > .qurity {
-	background: #f3ef1c;
-}
-.dialog.bad > .qurity {
-	background: #ec940f;
-}
-.dialog.verybad > .qurity {
-	background: #ec0f0f;
-}
 
 .nav-tabs {
 	margin-bottom: 20px;
@@ -417,14 +317,12 @@ var setTimeoffline = function() {
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm25">
 				  <div class="content">00.00 ug/m3 </div>
-				  <div class="qurity" id="qut25">...</div>
 				  <div class="title">PM 2.5</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="dialog success fadeIn animated" id="pm10">
 				  <div class="content">00.00 ug/m3 </div>
-				  <div class="qurity" id="qut10">...</div>
 				  <div class="title">PM 10</div>
 				</div>
 			</div>
@@ -440,8 +338,12 @@ var setTimeoffline = function() {
   
 	
 </body>
-<center>
+<footer>
+	<center>
 		<img src=image/aqi.png width="40%" >
-	  <div>Last up date</div></center>
-	 <center><div class="dialog success fadeIn animated" class="content" id="update_time"></div> </center> 
+	  	<div>Last up date</div></center>
+	 <center>
+		 <div class="dialog success fadeIn animated" class="content" id="update_time"></div> 
+	</center>
+</footer>
 </html>
